<resources>
    <string name="app_name">StayHome App</string>
    <string name="title_activity_default">StayHome App</string>
    <string name="tab_quests">Quests</string>
    <string name="tab_achievements">Achievements</string>

    <string name="notification_channel">StayHome App Notifications</string>
    <string name="notification_not_home_title">You left your home</string>
    <string name="notification_not_home_text">Open the App to tell us your reasons</string>

    <!--Inital Launch-->
    <string name="current_wifi">Home Network</string>
    <string name="info_why_wifi">This is a very very veeeery long placeholder just to tell you something very interestening. it is so interestening that i have no clue if im spelling interesting correctly, but not interesting enough, that i would check. Now you must be thinking \"WOW that must be a crazy piece of info!!11\" and you are right. We track you.</string>
    <string name="home_wifi">Home Network</string>
    <string name="button_open_wifi_settings">WIFI SETTINGS</string>
    <string name="button_confirm_wifi">SET WIFI</string>
    <string name="wifi_disabled_title">WiFi Disabled</string>
    <string name="wifi_disabled_message">Hey, We noticed You are not connected to any WiFi right now. Please go into your settings and connect to your home network.</string>

    <string name="name_button_confirm">OK</string>
    <string name="name_tell_us_your_name">Please tell us your Name!</string>
    <string name="name_label_name">Name</string>
    <!--Not Home Question-->
    <string name="return_home_question">Where did the adventure go?</string>
    <string name="rb_einkaufen">Einkaufen</string>

    <string name="skip_quest">Skip</string>
    <string name="finish_quest">Done</string>
    <string name="exp">%1$d EXP</string>
    <string name="level">Level %1$d</string>
</resources>
